# modernC-

./: README.md
Qt/: QtInfrastructure.uxf
Qt/Menu/: CMakeLists.txt  Menu_en_US.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/TextFinder/: CMakeLists.txt  TextFinder_en_US.ts  input.txt  textfinder.cpp  textfinder.ui
cmake/cmake-3.26.0-rc2-tutorial-source/Step1/: CMakeLists.txt  tutorial.cxx
hackerrank/: README.md  arrayMuniplate.cpp  domain1.c  domain2.c  domain3.c  domain4.c  newYearChaos.cpp  printPrimes.cpp  sensorClient.cpp  sensorClient2.cpp  simplefile.cpp  tut1.c  tut2.c  tut3.c  waiter.cpp  wss.cpp  wss1.cpp  wss3.cpp
meta/constexpr/: CMakeLists.txt  ConstexprConfig.h.in  constexpr.cpp
pduif/: CMakeLists.txt  licd.cpp  licd.h  pduif.cpp
template/: VMFUtility.hh  assert.cpp  main.cpp  sign2.cpp  vmf2.hh
template/VmfAttribute/: CMakeLists.txt  VmfAttribute.h  VmfAttribute.hh  VmfAttributeBuffer.h  VmfAttributeBufferTest.cc  VmfAttributeTest.cc  VmfDebug.cc  VmfDebug.h  msb.cpp  try.cc
try/: ParsingMessage.cpp  ParsingMessage.h  fibonacci.cpp
unittest/: README.md
unittest/turtle/: CMakeLists.txt  MockTurtle.h  MockTurtleTest.cc  Painter.h  Turtle.h
wss/: CMakeLists.txt  sensorClient.cpp  wss.cpp
